tests/compiler/test_files/too_long_hex_string_literal.swift
// error

var abc45 = "\u{aFb9BDFC}" 
